xslt correction chemin css

--- a/xsl/introduction.html
+++ b/xsl/introduction.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <link href="../assets/main.scss" rel="stylesheet">
+      <link href="../assets/main.css" rel="stylesheet">
       <title>Édition numérique de Ledoux</title><script src="https://hypothes.is/embed.js" async></script></head>
    <body>L’architecture<br> 
       considérée <br> 
