ajout d’une colonne

--- a/introduction.html
+++ b/introduction.html
@@ -3,11 +3,13 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <link href="assets/main.css" rel="stylesheet">
       <title>Édition numérique de Ledoux</title><script src="https://hypothes.is/embed.js" async></script></head>
-   <body>L’architecture<br> 
+   <body>
+      <main>
+      <p>L’architecture<br> 
       considérée <br> 
       sous le rapport de l’art,<br> 
       des mœurs <br> 
-      et de la législation&nbsp;; <br>par C.&nbsp;N. Ledoux
+      et de la législation&nbsp;; <br>par C.&nbsp;N. Ledoux</p>
       <p>
          <emph class="foreign">Exegi monumentum....</emph>
       </p>Tome Premierde l’imprimerie de H. L. Peronneau<span class="placeName">à Paris</span>chez l’auteur, rue neuve d’OrléansM.D.CCCIV
@@ -1381,5 +1383,6 @@
             </p>.
          </p>
       </div>
+      </main>
    </body>
 </html>
