ajout d’un main

--- a/introduction.html
+++ b/introduction.html
@@ -1,9 +1,9 @@
 <html>
    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <link href="css/edition.css" rel="stylesheet">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <link href="css/edition.css" rel="stylesheet"/>
       <title>Édition numérique de Ledoux</title>
-      <script src="https://hypothes.is/embed.js" async></script>
+      <script src="https://hypothes.is/embed.js" async=""></script>
    </head>
    <body>
       <main>
