--- a/ledouxProspectus.html
+++ b/ledouxProspectus.html
@@ -1,9 +1,11 @@
 <html>
    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <link href="css/edition.css" rel="stylesheet">
-      <title>Prospectus de L’Architecture de Ledoux</title><script src="https://hypothes.is/embed.js" async></script></head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <link href="css/edition.css" rel="stylesheet"/>
+      <title>Prospectus de L’Architecture de Ledoux</title>
+      <script src="https://hypothes.is/embed.js" async=""></script></head>
    <body>
+      <main>
       <div>
          <h1>L’Architecture <br>
             considérée <br>
@@ -456,5 +458,6 @@
          </p>
          <p>S'adresser, pour les souscriptions différentes, à M. Heü, maison de l'Auteur, rue Neuve d'Orléans, n°. 227, à Paris. On affranchira le port.</p>
       </div>
+      </main>
    </body>
 </html>
