--- a/edition/index.html
+++ b/edition/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -14,18 +15,18 @@
                   <br>et de la législation&nbsp;;</h1>
                <h2 class="docAuthor">par C.&nbsp;N. Ledoux</h2>
                <p class="epigraph">
-                  <emph class="foreign">Exegi monumentum....</emph>
+                  <em class="foreign">Exegi monumentum....</em>
                </p>
-               <h2>Tome Premier</h2>
+               <h2>Page d’accueil des annotateurs</h2>
                <h3 class="docImprint">à Paris</h3>
-               <h3 class="docImprint">de l’imprimerie de H. L. Peronneau chez l’auteur, rue neuve d’Orléans</h3>
-               <h3 class="docImprint"></h3>M.D.CCCIV</header>
+               <h3 class="docImprint">Labex les passés dans le présent</h3>
+               <h3 class="docImprint">M.M.XXI</h3></header>
             <section>
                <h2>Sommaire</h2>
                <ul>
-                  <li href="ledoux1804.html">Texte intégral</li>
-                  <li href="introduction.html">Introduction</li>
-                  <li href="section1.html">Section 1</li>
+                  <li><a href="ledoux1804.html">Texte intégral</a></li>
+                  <li><a href="introduction.html">Introduction</a></li>
+                  <li><a href="section1.html">Section 1</a></li>
                </ul>
             </section>
                
