--- a/edition/introduction.html
+++ b/edition/introduction.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -13,7 +14,7 @@
       des mœurs <br> 
       et de la législation&nbsp;; <br>par C.&nbsp;N. Ledoux</p>
       <p>
-         <emph class="foreign">Exegi monumentum....</emph>
+         <em class="foreign">Exegi monumentum....</em>
       </p>Tome Premierde l’imprimerie de H. L. Peronneau<span class="placeName">à Paris</span>chez l’auteur, rue neuve d’OrléansM.D.CCCIV
       <div>
          <h1>À Sa Majesté<br> 
@@ -31,7 +32,7 @@
       </div><span>5</span><div>
          <h1>Introduction</h1>
          <p>
-            <emph class="foreign">Omnia vincit amor</emph>
+            <em class="foreign">Omnia vincit amor</em>
          </p>
          <p>C’est ce sentiment qui m’a inspiré et m’a soutenu dans ce long travail.</p>
          <p>Dans la foule des occupations dont on peut juger par l’immensité du travail que je mets
@@ -89,7 +90,7 @@
          </p>
          <p>Vu de près, le vice n’influe pas moins puissamment sur l’ame&nbsp;; par l’horreur qu’il
             lui imprime, il la fait réagir vers la vertu. L’
-            <emph class="foreign">Oïkema</emph> présente à la bouillante et volage jeunesse qu’il attire la dépravation dans sa nudité,
+            <em class="foreign">Oïkema</em> présente à la bouillante et volage jeunesse qu’il attire la dépravation dans sa nudité,
             et le sentiment de la dégradation de l’homme ranimant la vertu qui sommeille, conduit
             l’homme à l’autel de l’<span class="persName">Hymen</span> vertueux qui l’embrasse et le couronne.
          </p>
@@ -345,7 +346,7 @@
          <p>On ne s’écartera point de l’unité de la pensée, et des lignes de la variété des formes,
             des loix de la convenance, de la bienséance, de l’économie. L’unité, type du beau,
             
-            <emph class="foreign">omnis porro pulchritudinis unitas est</emph>, consiste dans le rapport des masses avec les détails ou les ornements, dans la non
+            <em class="foreign">omnis porro pulchritudinis unitas est</em>, consiste dans le rapport des masses avec les détails ou les ornements, dans la non
             interruption des lignes qui ne permettent pas que l’œil soit distrait par des accessoires
             nuisibles.
          </p>
@@ -552,10 +553,10 @@
             avec le moment, il suit l’impression qui le domine&nbsp;; l’artiste écrit comme il fait&nbsp;;
             toujours inspiré, des bureaux de commis deviennent sous sa main des Propylées magnifiques
             <p>Propylées vient de 
-               <emph class="foreign">πro</emph>, 
-               <emph class="foreign">π</emph>, porte d’avant, ou 
-               <emph class="foreign">πro</emph>, 
-               <emph class="foreign">π</emph>, pile, pilier, strues, construction.
+               <em class="foreign">πro</em>, 
+               <em class="foreign">π</em>, porte d’avant, ou 
+               <em class="foreign">πro</em>, 
+               <em class="foreign">π</em>, pile, pilier, strues, construction.
             </p>&nbsp;; la maison d’une danseuse offre le temple de <span class="persName">Therpsicore</span>&nbsp;; le hangard d’un marchand développe les jardins de <span class="persName">Zéphyre</span> et <span class="persName">Flore</span>&nbsp;; des champs arides produisent des usines, des villes où les colonnes poussent à
             côté des orties. 
          </p>
@@ -1163,7 +1164,7 @@
          </p>
          <p>La vérité est là, elle est au fond de ce souterrain excavé dans le roc. Allumez vos
             flambeaux, agitez-les sur ces margelles arrondies&nbsp;; descendez, lisez&nbsp;: 
-            <emph class="foreign">noli me tangere</emph>. Plaise à Dieu que l’intérêt des peuples qui maintient l’imposant équilibre des religions,
+            <em class="foreign">noli me tangere</em>. Plaise à Dieu que l’intérêt des peuples qui maintient l’imposant équilibre des religions,
             des gouvernements, consacre ce principe&nbsp;; plaise à Dieu qu’il élève des temples, qu’il
             les multiplie pour y placer, au centre des passions ambitieuses, cette inscription
             solemnelle.
@@ -1381,7 +1382,7 @@
             </p>
             <p>(*) Passe pour la rime, mais la raison&nbsp;! .....</p>
             <p>(**) 
-               <emph class="foreign">Virga aurea</emph>&nbsp;: Lettre de <span class="persName">Cassiodore</span>.
+               <em class="foreign">Virga aurea</em>&nbsp;: Lettre de <span class="persName">Cassiodore</span>.
             </p>.
          </p>
       </div>
