--- a/edition/ledoux1804.html
+++ b/edition/ledoux1804.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <link href="../css/edition.css" rel="stylesheet">
-      <title>L’Architecture de Ledoux Une édition numérique</title><script src="https://hypothes.is/embed.js" async></script></head>
+      <title>L’Architecture de Ledoux. Une édition numérique</title><script src="https://hypothes.is/embed.js" async></script></head>
    <body>
       <main>
          <section>
@@ -13,13 +14,12 @@
                   <br>des mœurs 
                   <br>et de la législation&nbsp;;</h1>
                <h2 class="docAuthor">par C.&nbsp;N. Ledoux</h2>
-               <p class="epigraph">
-                  <emph class="foreign">Exegi monumentum....</emph>
-               </p>
+               <p class="epigraph"><em class="foreign">Exegi monumentum....</em></p>
                <h2>Tome Premier</h2>
                <h3 class="docImprint">à Paris</h3>
                <h3 class="docImprint">de l’imprimerie de H. L. Peronneau chez l’auteur, rue neuve d’Orléans</h3>
-               <h3 class="docImprint"></h3>M.D.CCCIV</header>
+               <h3 class="docImprint">M.D.CCCIV</h3>
+            </header>
             <section>
                <h1>À Sa Majesté 
                   <br>L’Empereur 
@@ -30,8 +30,7 @@
                   contribuera au bonheur du genre humain.</p>
                <p>J’ai l’honneur d’être, avec la reconnaissance la plus respectueuse,<br> de Votre Majesté Impériale,<br> Le très-humbe &amp; très<br> obéissant Serviteur,</p>Le douxGravé par Dien</section><span class="pageNum">5</span><section>
                <h1>Introduction</h1>
-               <p class="epigraph">
-                  <emph class="foreign">Omnia vincit amor</emph>C’est ce sentiment qui m’a inspiré et m’a soutenu dans ce long travail.</p>
+               <p class="epigraph"><em class="foreign">Omnia vincit amor</em>C’est ce sentiment qui m’a inspiré et m’a soutenu dans ce long travail.</p>
                <p><span class="capital">Dans</span> la foule des occupations dont on peut juger par l’immensité du travail que je mets
                   sous les yeux des Nations&nbsp;; au milieu des agitations dont on a fatigué ma constance&nbsp;;
                   au sein des persécutions inséparables de la publicité des grandes conceptions, et
@@ -77,8 +76,7 @@
                   elles en accélèrent le développement et en propagent les effets. Oh&nbsp;! que de chefs-d’œuvre
                   <span class="persName">les Goths</span> eussent laissés à la postérité, si les <span class="persName">Phidias</span> du temps avoient épuré leur style&nbsp;!</p>
                <p>Vu de près, le vice n’influe pas moins puissamment sur l’ame&nbsp;; par l’horreur qu’il
-                  lui imprime, il la fait réagir vers la vertu. L’
-                  <emph class="foreign">Oïkema</emph> présente à la bouillante et volage jeunesse qu’il attire la dépravation dans sa nudité,
+                  lui imprime, il la fait réagir vers la vertu. L’<em class="foreign">Oïkema</em> présente à la bouillante et volage jeunesse qu’il attire la dépravation dans sa nudité,
                   et le sentiment de la dégradation de l’homme ranimant la vertu qui sommeille, conduit
                   l’homme à l’autel de l’<span class="persName">Hymen</span> vertueux qui l’embrasse et le couronne.</p>
                <p>L’Atelier de corruption, sous ses antres obscurs et profonds, lui découvre les sources
@@ -287,8 +285,7 @@
                   dangereux.</p>
                <p>On ne s’écartera point de l’unité de la pensée, et des lignes de la variété des formes,
                   des loix de la convenance, de la bienséance, de l’économie. L’unité, type du beau,
-                  
-                  <emph class="foreign">omnis porro pulchritudinis unitas est</emph>, consiste dans le rapport des masses avec les détails ou les ornements, dans la non
+                  <em class="foreign">omnis porro pulchritudinis unitas est</em>, consiste dans le rapport des masses avec les détails ou les ornements, dans la non
                   interruption des lignes qui ne permettent pas que l’œil soit distrait par des accessoires
                   nuisibles.</p>
                <p>La variété donne à chaque édifice la physionomie qui lui est propre, elle multiplie,
@@ -454,11 +451,7 @@
                   beau jour qui laisse voir à travers l’onde argentine les reflets des arbres qui se
                   peignent dans ces miroirs mobiles. L’homme élevé, toujours soutenu, ne compose pas
                   avec le moment, il suit l’impression qui le domine&nbsp;; l’artiste écrit comme il fait&nbsp;;
-                  toujours inspiré, des bureaux de commis deviennent sous sa main des Propylées magnifiques<span class="note"><span class="noteLabel">1</span>Propylées vient de 
-                     <emph class="foreign">πro</emph>, 
-                     <emph class="foreign">π</emph>, porte d’avant, ou 
-                     <emph class="foreign">πro</emph>, 
-                     <emph class="foreign">π</emph>, pile, pilier, strues, construction.</span>&nbsp;; la maison d’une danseuse offre le temple de <span class="persName">Therpsicore</span>&nbsp;; le hangard d’un marchand développe les jardins de <span class="persName">Zéphyre</span> et <span class="persName">Flore</span>&nbsp;; des champs arides produisent des usines, des villes où les colonnes poussent à
+                  toujours inspiré, des bureaux de commis deviennent sous sa main des Propylées magnifiques<span class="note"><span class="noteLabel">1</span>Propylées vient de <em class="foreign">πro</em>, <em class="foreign">π</em>, porte d’avant, ou <em class="foreign">πro</em>, <em class="foreign">π</em>, pile, pilier, strues, construction.</span>&nbsp;; la maison d’une danseuse offre le temple de <span class="persName">Therpsicore</span>&nbsp;; le hangard d’un marchand développe les jardins de <span class="persName">Zéphyre</span> et <span class="persName">Flore</span>&nbsp;; des champs arides produisent des usines, des villes où les colonnes poussent à
                   côté des orties.</p>
                <p>Pourquoi, me dira-t-on, employer sans relâche le style figuré&nbsp;?</p>
                <p>Il faut du repos, il faut de grandes lacunes pour soutenir l’attention et faire valoir
@@ -963,8 +956,7 @@
                   qui dictez les loix <span class="pageNum">36</span> du bonheur&nbsp;; vous souverains qui commandez&nbsp;! vous ministres des dieux, ministres
                   de la terre qui faites exécuter, venez prendre ici une leçon.</p>
                <p>La vérité est là, elle est au fond de ce souterrain excavé dans le roc. Allumez vos
-                  flambeaux, agitez-les sur ces margelles arrondies&nbsp;; descendez, lisez&nbsp;: 
-                  <emph class="foreign">noli me tangere</emph>. Plaise à Dieu que l’intérêt des peuples qui maintient l’imposant équilibre des religions,
+                  flambeaux, agitez-les sur ces margelles arrondies&nbsp;; descendez, lisez&nbsp;: <em class="foreign">noli me tangere</em>. Plaise à Dieu que l’intérêt des peuples qui maintient l’imposant équilibre des religions,
                   des gouvernements, consacre ce principe&nbsp;; plaise à Dieu qu’il élève des temples, qu’il
                   les multiplie pour y placer, au centre des passions ambitieuses, cette inscription
                   solemnelle.</p>
@@ -1123,7 +1115,7 @@
                      n’y a pas lieu à liquidation<span class="note"><span class="noteLabel">*. </span>Passe pour la rime, mais la raison&nbsp;! .....</span>.De tout temps les Architectes ont contribué à la splendeur des nations. Rapprochons
                      les époques pour juger des progrès de la civilisation. En 520, <span class="persName">Théodoric, Roi des Ostrogoths</span>, fit réparer les murs de <span class="placeName">Rome</span>, et construire plusieurs autres édifices. Il écrivoit à ses Architectes, qu’il les considéroit comme la plus belle image de la puissance des empires, qu’ils attestoient
                      la grandeur et la gloire des royaumes. .... Ces Architectes marchoient immédiatement avant lui dans les grandes cérémonies,
-                     le bâton d’or à la main<span class="note"><span class="noteLabel">**. </span><emph class="foreign">Virga aurea</emph>&nbsp;: Lettre de <span class="persName">Cassiodore</span>.</span>. Ceux d’aujourd’hui n’ont que le bâton blanc&nbsp;!</span>.</p>
+                     le bâton d’or à la main<span class="note"><span class="noteLabel">**. </span><em class="foreign">Virga aurea</em>&nbsp;: Lettre de <span class="persName">Cassiodore</span>.</span>. Ceux d’aujourd’hui n’ont que le bâton blanc&nbsp;!</span>.</p>
             </section>
          </section>
          <section><span class="pageNum">43</span><section>
@@ -1714,8 +1706,7 @@
                <p>Les furies de la vengeance avoient depuis long-temps attisé leurs torches incendiaires&nbsp;;
                   le feu prend au spectacle, déjà le palais brûle, bientôt il est consumé&nbsp;: les flammes
                   s’étendent de toutes parts. La rivière étoit desséchée, les pompes sans effet, les
-                  arts inconnus&nbsp;; le besoin, cet 
-                  <emph class="foreign">ultimatum</emph> forcé qui ramène l’homme aux calculs de la raison, change tout de face, dissipe les
+                  arts inconnus&nbsp;; le besoin, cet <em class="foreign">ultimatum</em> forcé qui ramène l’homme aux calculs de la raison, change tout de face, dissipe les
                   écarts, et rappelle en peu de jours les puissants moteurs qui vivifient les empires.
                   Toute compression se dilate&nbsp;; la science, les talents du premier ordre sont accueillis,
                   sont divinisés. On creuse un lit fécond à la rivière, on remonte l’eau des mers par
@@ -4194,9 +4185,7 @@
                <h1>Pacifère<span class="note"><span class="noteLabel">1</span>Pacifère ou le Conciliateur. On dit morbifère, sommifère, mortifère, on peut dire
                      pacifère.</span></h1>
                <h1>Plans, coupes et perspective</h1>
-               <h1>Planche 40</h1>
-               <emph class="foreign">Non mihi, si linguœ centum sint oraque centum,Ferrea vox, omnes scelerum comprendere formas, Omnia poenarum percurrere nomina possim.</emph>
-               <p><span class="persName">Virgile</span></p>
+               <h1>Planche 40</h1><em class="foreign">Non mihi, si linguœ centum sint oraque centum,Ferrea vox, omnes scelerum comprendere formas, Omnia poenarum percurrere nomina possim.</em><p><span class="persName">Virgile</span></p>
                <p>J’élevois un temple au bonheur. Dans mon aveugle enthousiasme j’amoncelois des pierres
                   les unes sur les autres, et je voulois en former un monument digne de la grande idée
                   dont se repaissoit mon imagination&nbsp;; tout-à-coup je suis transporté dans un de ces
@@ -4496,9 +4485,7 @@
                   car de toutes les qualités, celle qui plaît le moins au beau sexe, c’est l’imperturbabilité.
                   L’<span class="persName">Amour</span> est un enfant timide qui chérit l’égalité. L’attraction sympathique qui n’humilie
                   pas sa foiblesse, l’empêche d’essayer ses forces. Le sage veut-il lui plaire&nbsp;? qu’il
-                  caresse ses penchants&nbsp;; veut-il être aimé&nbsp;? qu’il soit aimable.</p>
-               <emph class="foreign">Ut ameiis amabilis esto.</emph>
-               <p><span class="persName">Ovide</span>.</p>
+                  caresse ses penchants&nbsp;; veut-il être aimé&nbsp;? qu’il soit aimable.</p><em class="foreign">Ut ameiis amabilis esto.</em><p><span class="persName">Ovide</span>.</p>
                <p>Si les impressions du moment se peignent sur tous les ouvrages de l’Architecte, voyez
                   combien il est intéressant pour lui, pour la chose publique, qu’il s’entoure de tout
                   ce qui peut entretenir le charme de la vie. Malheur à celui dont le crayon se noircit
@@ -4775,9 +4762,7 @@
                   stimulée peut créer&nbsp;; on le voit s’agrandir aux traits qu’il emprunte de tous les
                   rayons qui l’environnent, pour couvrir d’un rézeau doré les besoins de la vie commune&nbsp;;
                   et s’il déploie de puissantes ressources, c’est pour animer un peuple de géants qu’il
-                  a trayés au milieu des <span class="persName">Lilliputiens</span>.</p>
-               <emph class="foreign">Grandiaque effossis mirabitur ossa sepulchris.</emph>
-            </section><span class="pageNum">129</span><section>
+                  a trayés au milieu des <span class="persName">Lilliputiens</span>.</p><em class="foreign">Grandiaque effossis mirabitur ossa sepulchris.</em></section><span class="pageNum">129</span><section>
                <h1>Élévation de la maison 
                   <br>des 
                   <br>commis employés à la surveillance</h1>
@@ -4835,8 +4820,7 @@
                   qui leur ont donné des valeurs&nbsp;; il pourra méditer sur les vanités qui les engloutissent.
                   Interrogez le passé, jugez le présent, vous verrez les idées fermenter par les idées&nbsp;;
                   vous verrez que l’enchaînement des choses qui remuent les conceptions s’est développé
-                  de tout temps par le même principe. Le <span class="placeName">Capitole</span> prend son nom du mot latin 
-                  <emph class="foreign">caput</emph>, à cause de la tête d’un cheval qu’on trouva en creusant les fondations.</p>
+                  de tout temps par le même principe. Le <span class="placeName">Capitole</span> prend son nom du mot latin <em class="foreign">caput</em>, à cause de la tête d’un cheval qu’on trouva en creusant les fondations.</p>
                <p>Ici, dans le champ aride que vous voyez, au milieu des ronces, des épines, des cailloux,
                   nous foulons aux pieds les héros qui ont assuré, par l’effusion de leur sang, la splendeur
                   et la durée du plus fameux empire. Peuples de la terre&nbsp;! artistes circonscrits dans
@@ -5229,8 +5213,7 @@
                   donner faveur à des surfaces imparfaites&nbsp;? comment peut-on négliger celles qui produisent
                   des ombres caractéristiques&nbsp;? Rectitude sociale&nbsp;! la force de ta morale est là&nbsp;; elle
                   s’explique aux yeux de la multitude qui compare, raisonne et s’empreint du caractère
-                  que les formes décidées suggèrent. <span class="persName">Menésiclès</span><span class="note"><span class="noteLabel">1</span>Voyez les Propylées.</span>, dans sa proportion, n’a rien à redouter de la distance&nbsp;; <span class="persName">Alcide</span><span class="note"><span class="noteLabel">2</span>Vient d’
-                     <emph class="foreign">άλϗη</emph>, force.</span>, prononcé dans ses muscles, inspire le courage&nbsp;; <span class="persName">Homère</span>, l’<span class="persName">Atlas</span> de la poésie, soulève l’expression&nbsp;; la trempe de l’ame dans ses affections, n’est
+                  que les formes décidées suggèrent. <span class="persName">Menésiclès</span><span class="note"><span class="noteLabel">1</span>Voyez les Propylées.</span>, dans sa proportion, n’a rien à redouter de la distance&nbsp;; <span class="persName">Alcide</span><span class="note"><span class="noteLabel">2</span>Vient d’<em class="foreign">άλϗη</em>, force.</span>, prononcé dans ses muscles, inspire le courage&nbsp;; <span class="persName">Homère</span>, l’<span class="persName">Atlas</span> de la poésie, soulève l’expression&nbsp;; la trempe de l’ame dans ses affections, n’est
                   jamais équivoque&nbsp;; si elle pouvoit l’être, le trait carré que vous voyez la rappelleroit
                   à ses combinaisons impérieuses&nbsp;; il est si fort qu’il supporteroit le monde&nbsp;: pourquoi
                   ceux qui le gouvernent ne l’auroient-ils pas&nbsp;?</p>
@@ -7306,7 +7289,7 @@
                <p>Tout le monde sait que les rois d’<span class="placeName">Égypte</span>, pour occuper les loisirs de l’esclavage et tenir dans leurs serres les fils qui
                   avoient ourdi la victoire, ont fondé à grands frais les pyramides. Le faste qui n’avoit
                   pour but qu’une sépulture dédaigneuse de l’humanité, les acheva&nbsp;; l’idée de la flamme
-                  qui s’effile<span class="note"><span class="noteLabel">1</span><emph class="foreign">Σπιρα</emph></span> par la pression de l’air, en détermina la forme.</p>
+                  qui s’effile<span class="note"><span class="noteLabel">1</span><em class="foreign">Σπιρα</em></span> par la pression de l’air, en détermina la forme.</p>
                <p>Croyez-vous que l’idée de la terre lui cède en grandeur&nbsp;? cette machine ronde n’est-elle
                   pas sublime&nbsp;? Eh bien&nbsp;! à quoi serviront ces élans de l’art s’ils viennent se briser
                   aux pieds de l’indifférence, qui voit d’un œil apathique les afflictions, quand elles
@@ -7524,8 +7507,7 @@
                   dans le souvenir qu’assaisonne l’ivresse du plaisir&nbsp;?</p>
                <p>Dieu de l’inspiration, tu m’égares&nbsp;! Revenons au monument&nbsp;; retraçons cet antique
                   séjour de l’imagination que le favori des <span class="persName">Grâces</span> a peint avec tant de succès.</p>
-               <p>
-                  <emph class="foreign"><em>In principio erat</em></emph> oui, sans doute, c’étoit le créateur. Eh&nbsp;! quand l’homme veut consacrer la</p>
+               <p><em class="foreign"><em>In principio erat</em></em> oui, sans doute, c’étoit le créateur. Eh&nbsp;! quand l’homme veut consacrer la</p>
                <p>reconnoissance pour l’acquit de tant de biens reçus, peut-il mieux faire que d’appliquer
                   le sentiment qui l’inspire à celui qui imprime le mouvement, à celui qui dans l’univers
                   met en jeu toute la nature, à celui à qui tout obéit.</p>
