--- a/edition/index.html
+++ b/edition/index.html
@@ -3,7 +3,9 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <link href="../css/edition.css" rel="stylesheet">
-      <title>L’Architecture de Ledoux. Une édition numérique</title><script src="https://hypothes.is/embed.js" async></script></head>
+      <title>L’Architecture de Ledoux – Accueil des annotateurs</title>
+         <script src="https://hypothes.is/embed.js" async></script>
+   </head>
    <body>
       <main>
          <section>
@@ -18,15 +20,13 @@
                   <em class="foreign">Exegi monumentum....</em>
                </p>
                <h2>Page d’accueil des annotateurs</h2>
-               <h3 class="docImprint">à Paris</h3>
-               <h3 class="docImprint">Labex les passés dans le présent</h3>
-               <h3 class="docImprint">M.M.XXI</h3></header>
+            </header>
             <section>
                <h2>Sommaire</h2>
                <ul>
                   <li><a href="ledoux1804.html">Texte intégral</a></li>
                   <li><a href="introduction.html">Introduction</a></li>
-                  <li><a href="section1.html">Section 1</a></li>
+                  <li><a href="sequence01.html">Séquence 01 (15 avril 2021)</a></li>
                </ul>
             </section>
                
