--- a/edition/index.html
+++ b/edition/index.html
@@ -27,6 +27,7 @@
                   <li><a href="ledoux1804.html">Texte intégral</a></li>
                   <li><a href="introduction.html">Introduction</a></li>
                   <li><a href="sequence01.html">Séquence 01 (15 avril 2021)</a></li>
+                  <li><a href="sequence01.html">Séquence 02 (10 mai 2021)</a></li>
                </ul>
             </section>
                
