--- a/edition/index.html
+++ b/edition/index.html
@@ -22,8 +22,21 @@
                <h2>Page d’accueil des annotateurs</h2>
             </header>
             <section>
+               <h2>Ressources</h2>
+               <ul>
+                  <li><a href="https://sharedocs.huma-num.fr/wl/?id=AxPoVSAvYNZdn9wK5ybIIn0U0WlxnrVe">Ouvrages et articles numérisés</a></li>
+                  <li><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b">Images volume 1 (Gallica)</a></li>
+                  <li><a href="https://sharedocs.huma-num.fr/wl/?id=dI4ZI1TImy7DlhKDgvI8lrdFC8EBUAIE">Images Ramée (Sharedocs)</a></ul>li>
+                  <li><a href="https://bibliotheques-specialisees.paris.fr/ark:/73873/pf0000893999/v0001.simple.selectedTab=thumbnail">Inédits pour un Tome III (BHVP)</a></li>
+                  <li><a href="https://docs.google.com/spreadsheets/d/1zKh1-o7Kp4m3SCVaqKFX8UMk0ctiBFAGdaNAHWCSwl4/edit#gid=0">Tableau des séquences</a></li>
+                  <li><a href="https://docs.google.com/spreadsheets/d/10JL-prj2vsowVtqJowaec8a7qPXxXQtb4JL1WDF2NBo/edit#gid=0">Tableau des tags</a></li>
+               </ul>
+            </section>
+            <section>
                <h2>Sommaire</h2>
                <ul>
+                  <li><a href="resume.html">Résumés de l’ouvrage de 1804</a></li>
+                  <li><a href="https://voyant-tools.org/?corpus=7ddd39cdc11fd600364c8185330f15de">Texte dans Voyant-tools</a></li>
                   <li><a href="ledoux1804.html">Texte intégral</a></li>
                   <li><a href="introduction.html">Introduction</a></li>
                   <li><a href="sequence01.html">Séquence 01 (15 avril 2021)</a></li>
