--- a/edition/index.html
+++ b/edition/index.html
@@ -26,7 +26,7 @@
                <ul>
                   <li><a href="https://sharedocs.huma-num.fr/wl/?id=AxPoVSAvYNZdn9wK5ybIIn0U0WlxnrVe">Ouvrages et articles numérisés</a></li>
                   <li><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b">Images volume 1 (Gallica)</a></li>
-                  <li><a href="https://sharedocs.huma-num.fr/wl/?id=dI4ZI1TImy7DlhKDgvI8lrdFC8EBUAIE">Images Ramée (Sharedocs)</a></ul>li>
+                  <li><a href="https://sharedocs.huma-num.fr/wl/?id=dI4ZI1TImy7DlhKDgvI8lrdFC8EBUAIE">Images Ramée (Sharedocs)</a></li>
                   <li><a href="https://bibliotheques-specialisees.paris.fr/ark:/73873/pf0000893999/v0001.simple.selectedTab=thumbnail">Inédits pour un Tome III (BHVP)</a></li>
                   <li><a href="https://docs.google.com/spreadsheets/d/1zKh1-o7Kp4m3SCVaqKFX8UMk0ctiBFAGdaNAHWCSwl4/edit#gid=0">Tableau des séquences</a></li>
                   <li><a href="https://docs.google.com/spreadsheets/d/10JL-prj2vsowVtqJowaec8a7qPXxXQtb4JL1WDF2NBo/edit#gid=0">Tableau des tags</a></li>
