ajout lien zotero

--- a/edition/index.html
+++ b/edition/index.html
@@ -24,6 +24,7 @@
             <section>
                <h2>Ressources</h2>
                <ul>
+                  <li><a href="https://www.zotero.org/groups/2510024/ledoux">Groupe bibliographique (Zotero)</a></li>
                   <li><a href="https://sharedocs.huma-num.fr/wl/?id=AxPoVSAvYNZdn9wK5ybIIn0U0WlxnrVe">Ouvrages et articles numérisés</a></li>
                   <li><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b">Images volume 1 (Gallica)</a></li>
                   <li><a href="https://sharedocs.huma-num.fr/wl/?id=dI4ZI1TImy7DlhKDgvI8lrdFC8EBUAIE">Images Ramée (Sharedocs)</a></li>
