--- a/edition/index.html
+++ b/edition/index.html
@@ -42,6 +42,7 @@
                   <li><a href="introduction.html">Introduction</a></li>
                   <li><a href="sequence01.html">Séquence 01 (15 avril 2021)</a></li>
                   <li><a href="sequence02.html">Séquence 02 (10 mai 2021)</a></li>
+                  <li><a href="sequence03.html">Séquence 03 (6 septembre 2021)</a></li>
                </ul>
             </section>
                
