--- a/edition/index.html
+++ b/edition/index.html
@@ -43,6 +43,7 @@
                   <li><a href="sequence01.html">Séquence 01 (15 avril 2021)</a></li>
                   <li><a href="sequence02.html">Séquence 02 (10 mai 2021)</a></li>
                   <li><a href="sequence03.html">Séquence 03 (6 septembre 2021)</a></li>
+                  <li><a href="sequence04.html">Séquence 04 (18 octobre 2021)</a></li>
                </ul>
             </section>
                
