--- a/edition/ledouxProspectus 2.html
+++ b/edition/ledouxProspectus 2.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <link href="css/edition.css" rel="stylesheet">
+      <link href="../css/edition.css" rel="stylesheet">
       <title>Prospectus de L’Architecture de Ledoux</title><script src="https://hypothes.is/embed.js" async></script></head>
    <body>
       <div>
