renvoi au fichier prospectus 2

--- a/edition/index.html
+++ b/edition/index.html
@@ -36,7 +36,7 @@
             <section>
                <h2>Sommaire</h2>
                <ul>
-                  <li><a href="ledouxProspectus.html">Prospectus de 1802</a></li>
+                  <li><a href="ledouxProspectus 2.html">Prospectus de 1802</a></li>
                   <li><a href="resumes.html">Résumés de l’ouvrage de 1804</a></li>
                   <li><a href="https://voyant-tools.org/?corpus=7ddd39cdc11fd600364c8185330f15de">Texte dans Voyant-tools</a></li>
                   <li><a href="ledoux1804.html">Texte intégral</a></li>
