--- a/edition/resumes.html
+++ b/edition/resumes.html
@@ -24,6 +24,18 @@
       </section>
       <section>
         <div>
+          <p>
+            <em>p. 43</em>
+          </p>
+          <p>– « Je voyageois » ; nouvelle des travaux ouverts en Franche-Comté – Intérêt de la Franche-Comté – Description de ses « effets pittoresques » ; arrivée du voyageur à Salins, où il est guidé dans la saline par le directeur – Descente dans les « antres profonds » à la lumière des torches – Description des voûtes, roues, ponts. Le voyageur se fait ouvrir les trapes des récipients d’eau de samure par un « habitué ». – Effets de l’« enthousiasme » sur celui qui pénètre en ces lieux – Métamorphose surhumaine et ridiculisée du directeur (Marsyas) – Le voyageur quitte le « répétiteur » et franchit les marais – Joie de contempler le soleil</p>
+        </div>
+        <div>
+          <p>
+            <em>p. 44</em>
+          </p>
+          <p>– Réflexion politique : « On voit mal ce que l’on voit de trop près ; le monde politique a un point de vue, c’est à l’homme de le bien choisir » ; le voyageur quitte « l’abyme ténébreux » de la saline, lieu de richesse – Suite du départ du « pays des fantômes », le voyageur enlève son manteau et suit les eaux du fleuve – Sortie et contemplation du ballet des voitures – Prise de notes dans la « retraite nocturne » et consultation de la carte du pays – Matin – Description de la région qui s’éveille, les « milliers d’hommes » au travail – Découverte d’un atelier d’ouvriers près de la Loüe ; intervention du voyageur : il est « plus simple de détourner la route pour construire un pont, que de détourner le pont pour isoler la route » – Réponse d’un « régulateur »</p>
+        </div>
+        <div>
           <h3>Maison d’un employé. Plans, coupes, élévations (Planche 17), p. 78</h3>
           <h4>[un édifice peu intéressant par lui-même peut accélerer le progrès de l'Architecture]</h4>
           <p>
