ajout plage résumé

--- a/edition/resumes.html
+++ b/edition/resumes.html
@@ -24,6 +24,50 @@
       </section>
       <section>
         <div>
+          <h4>Postérité de l'architecte</h4>
+          <p><em>p. 9</em></p>
+          <p>Tirer profit des découvertes du passé ; valoriser ces découvertes et le sentiment qui les a provoquées, opposé aux « folles productions d’une imagination délirante » – toute action doit contribuer au bien social – la juxtaposition de ces actions doit éclairer les ténèbres – toutes les nations doivent y contribuer, et l’Architecte a un rôle clé dans ce programme – comme la rosée n’est célébrée qu’après la récolte, l’Architecte ne sera récompensé que « par l’immortalité de son nom » – la postérité admirera ses œuvres, débarrassées de tout « amalgame falsificateur » lié aux circonstances de leur création – ces œuvres indiqueront les principes « confirmés par l’expérience », les « règles immuables » de la construction. – 1. Choix du site et orientation du bâtiment en fonction des vents et du soleil.</p>
+        </div>
+        <div>
+          <h4>Règles immuables de l'architecture</h4>
+          <p>><em>p. 10</em></p>
+          <p>Danger des dépendances (?) – 2. Unité : « rapport des masses avec les détails », continuité des lignes – 3. Variété : réside dans le caractère propre à chaque édifice – 4. Convenance : construire en fonction de la richesse, du lieu, des besoins – 5. Bienséance : nécessaire correspondance entre proportions, ornements et fonction des édifices – 6. Economie des matières grâce aux « sages combinaisons de l’art » – 7. Symétrie : « puisée dans la nature, elle contribue à la solidité ». N’exclue pas le pittoresque, ni même le bizarre « qu’il faudroit bannir » – Le goût et la méthode – « Le véritable goût est de n’avoir pas de manières » : ni arbitraire, ni conventionnel, mais naturel chez certains.</p>
+        </div>
+        <div>
+          <h4>La distribution</h4>
+          <p><em>p. 11</em></p>
+          <p>La méthode : permet de lier les choses les plus diverses. – l’empire de la beauté sur les sens – Richesses issues des mers, de l’industrie, du « goût vivifiant du bien-être » ; « L’homme du monde indique ses besoins ; souvent il les indique mal, l’Architecte les rectifie. » – La distribution : ses bases permettent de réduire les écarts, mais « ses modifications sont infinies. » – Les progrès de la distribution retardés par la manière de l’aborder : exemple de l’Italie où « on donne tout à la représentation » ; de la France où les divisions sont multipliées au détriment de la salubrité, de la commodité… – Variété vs caprice ; la distribution doit être assujettie au goût, à la « sévérité des lignes », au besoin, à l’économie du temps.</p>
+        </div>
+        <div>
+          <h4>La décoration</h4>
+          <p><em>p. 12</em></p>
+          <p>« ce que l’on doit à la classe laborieuse » qui travaille dans les champs ; passage à la première personne : engagement de l’architecte contre les négligences, « les abus […] qui retardent la science de la distribution », les préceptes qui l’enferment. – La décoration : « caractère expressif […] que l’on donne à chaque édifice », elle anime les surfaces, corrige les irrégularités, renforce les caractères, « cette coquette habile […] joue tous les rôles » et « les décorations bien conçues doivent être isolées ». – La science élève l’homme, mais elle fausse certaines perceptions.</p>
+        </div>
+        <div>
+          <h4>Les ordres</h4>
+          <p><em>p. 13</em></p>
+          <p>l’Architecture doit être indépendante, malgré les rapports qu’elle entretient avec « les parties qui la composent » – La beauté et la juste proportion de l’édifice achevé font oublier l’Architecte : « tout y paroît nature et tout y paroît art » – Les ordres : le mauvais goût à la mode vs les ordres grecs, le danger des règles trop générales : « la distance seule peut en fixer le diamètre et l’écartement ». – Les ordres fragiles doivent prendre place dans des lieux abrités des intempéries qui menacent leurs ornements.</p>
+        </div>
+        <div>
+          <h4>Le mobilier, les décors / La stéréotomie</h4>
+          <p><em>p. 14</em></p>
+          <p>nostalgie du temps où les murs des appartements étaient décorés de tableaux, où les lignes droites régnaient dans les menuiseries, aux plafonds, où le mobilier et ses ornements empruntaient au vocabulaire classique (« les beautés du Vatican »). Critique des papiers peints, de leur mauvaise qualité, de leurs couleurs, employés aussi bien dans les habitations que dans les théâtres. – L’art de la stéréotomie, la beauté des « belles masses », des contrastes appuyés, opposée aux ornements fragiles. – Seul ce parti semble adapté aux constructions isolées, particulièrement exposées aux accidents. – Se méfier du critique, « on perd la vue si on s’accoutume à voir par les yeux d’un autre ». </p>
+        </div>
+        <div>
+          <h4>Les femmes / Le texte et ses écarts</h4>
+          <p><em>p. 15</em></p>
+          <p>les femmes, « divinités de la terre », à qui l’on doit ses premiers crayons, ses premières idées. – Les mœurs publiques et l’économie politique gagneraient à s’inspirer des sentiments féminins ; lien entre les femmes et les colonnes (cannelures, volutes). – Risques du débat (?) – Justification des écarts dans le texte, pour « mettre en évidence des préceptes constatés par la nature et l’expérience » ; les longues descriptions ne correspondent pas toujours à des objets importants. – La puissance des sensations, par lesquelles l’homme se perfectionne – « L’Architecture est à la maçonnerie ce que la poésie est aux belles-lettres ».</p>
+        </div>
+        <div>
+          <h4>Le style figuré</h4>
+          <p><em>p. 16</em></p>
+          <p>pas d’uniformité dans l’expression – l’artiste sait transformer de simples programmes en édifices magnifiques, il sait créer quelque chose de fécond à partir d’un champ aride. – « Pourquoi, me dira-t-on, employer sans relâche le style figuré ? » – Importance des lacunes, du repos ; exemple de La Fontaine, Virgile, Homère ; l’Architecte, par ses écrits, doit élever son lecteur et « faire respirer ses murs » – L’importance de l’éloquence en art.</p>
+        </div>
+        <div>
+          <p><em>p. 17</em></p>
+          <p>à partir de petits projets, l’artiste crée de grandes choses ; son style doit être révélateur de sa pensée ; contrairement au poète, l’artiste peut créer dans l’isolement, s’appuyer sur les sentiments ; l’expression révèle librement le sentiment : un sentiment élevé s’exprime par un style élevé ; rien n’est étranger à l’Architecture, d’où les nombreux thèmes abordés par l’architecte dans ce livre ; l’architecte ne peut rien ignorer ; l’architecture existe depuis la naissance de l’homme ; l’architecte « a tout mis en action dès le commencement du monde ». – l’architecte ne peut ignorer la vertu. </p>
+        </div>
+        <div>
           <p>
             <em>p. 43</em>
           </p>
